--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "contributors": [
     {
+      "name": "Dmitri Zagidulin",
+      "email": "dzagidulin@digitalbazaar.com"
+    },
+    {
       "name": "Dave Longley",
       "email": "dlongley@digitalbazaar.com"
     },
@@ -31,8 +35,12 @@
     "email": "support@digitalbazaar.com"
   },
   "license": "BSD-3-Clause",
-  "main": "lib/index.js",
-  "dependencies": {},
+  "main": "src/index.js",
+  "dependencies": {
+    "crypto-ld": "digitalbazaar/crypto-ld#auto-set-id",
+    "did-context": "^2.0.0",
+    "x25519-key-pair": "digitalbazaar/x25519-key-pair#auto-set-id"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
@@ -47,7 +55,7 @@
     "Credential"
   ],
   "scripts": {
-    "mocha": "mocha ./tests/**/*.spec.js ./tests/*.spec.js",
+    "mocha": "mocha --timeout 10000 ./tests/**/*.spec.js ./tests/*.spec.js",
     "test": "npm run mocha",
     "preversion": "npm test",
     "postversion": "git push --follow-tags"
