--- a/package.json
+++ b/package.json
@@ -37,17 +37,14 @@
   "license": "BSD-3-Clause",
   "main": "src/index.js",
   "dependencies": {
-    "crypto-ld": "digitalbazaar/crypto-ld#auto-set-id",
-    "did-context": "^2.0.0",
-    "x25519-key-pair": "digitalbazaar/x25519-key-pair#auto-set-id"
+    "did-context": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "crypto-ld": "digitalbazaar/crypto-ld#extract-key-pairs",
     "dirty-chai": "^2.0.1",
+    "ed25519-key-pair": "digitalbazaar/ed25519-key-pair#initial",
     "mocha": "^5.0.5"
-  },
-  "engines": {
-    "node": "^8.3.0"
   },
   "keywords": [
     "Decentralized",
